[package]
name = "orcs"
version = "0.0.9"
authors = ["Nicolas Moutschen <nicolas.moutschen@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nmoutschen/orcs"
readme = "README.md"
description = "Microservices monorepo orchestration tool"

[dependencies]
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
tempfile = "3"
